--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,7 @@
     },
     
     "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font, JetBrains Mono Nerd Font, Consolas, 'Courier New', monospace",
-    "workbench.colorTheme": "Snazzy Plus",
+    "workbench.colorTheme": "Catppuccin Frappé",
     "editor.fontLigatures": true,
     "explorer.confirmDelete": false,
     "window.menuBarVisibility": "toggle",
